--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -405,9 +405,9 @@ body {
 
 }
 
-.main-menu {
+.maincontainer {
     width: 60%;
-    //border: 1px solid blue;
+    border: 1px solid blue;
     float: left;
 }
 
@@ -416,7 +416,7 @@ body {
     width: 38%;   
     //border: 1px solid blue;
     position: relative;
-    bottom: 130px;
+    //bottom: 130px;
 
 }
 
