--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -411,6 +411,8 @@ body {
     float: left;
 }
 
+
+
 .total-box {
     float: right;
     width: 38%;   
@@ -544,5 +546,23 @@ body {
     margin-right: 19px;
     margin-top: 20px;
     
+
+}
+
+.orange {
+    list-style-type: none;
+    cursor: pointer;
+    height: 100px;
+    width: 200px;
+    background-image: url(http://www.rockymountainmoggers.com/pix/db2550.jpg);
+    //border-radius: 8px;
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 25px;
+    text-align: center;
+    font-size: 30px;
+    line-height: 100px;
+    border: 3px solid black;
+    //box-shadow: 0 10px 35px -8px red;
 
 }
