code broken into separate files

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -405,12 +405,13 @@ body {
 
 }
 
-.maincontainer {
+
+
+.menucontainer {
     width: 60%;
     border: 1px solid blue;
     float: left;
 }
-
 
 
 .total-box {
