--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -431,6 +431,12 @@ body {
     float: left;
 }
 
+.buttons {
+    width: 60%;
+    border: 1px solid blue;
+    float: left;
+}
+
 
 .total-box {
     float: right;
