stopped multi view instantiation

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,6 +27,7 @@ body {
 
 .container {
     width: 100%;
+
 }
 
 .login-container {
@@ -437,6 +438,7 @@ body {
 
 .buttons {
     width: 60%;
+    height: 500px;
     border: 1px solid blue;
     float: left;
 }
