--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,6 +34,7 @@ body {
 
 
 
+
 .header {
     background-color: black;
     margin: 0px;
@@ -171,7 +172,7 @@ body {
 
 
 
-.password {
+.loginpassword {
     width: 350px;
     height: 50px;
     position: relative;
