--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,7 @@ body {
     color: #333;
 }
 
+
 .category {
     height: 100px;
     width: 175px;
@@ -30,7 +31,9 @@ body {
 
 }
 
-
+.myClass {
+    background-color: green;
+}
 
 
 
@@ -499,7 +502,7 @@ span {
     background: rgb(206,220,231);
     margin-left: 15px;
     color: red;
-    text-indent: 10px;
+    //text-indent: 10px;
 
 
 
@@ -511,6 +514,8 @@ span {
     margin-left: 15px;
     border: 1px solid black;
     background: rgb(206,220,231);
+    color: red;
+    //text-indent: 10px;
 }
 
 .totaltotal {
@@ -519,6 +524,8 @@ span {
     margin-left: 15px;
     border: 1px solid black;
     background: rgb(206,220,231);
+    color: red;
+    //text-indent: 10px;
 }
 
 .sendmaster{
@@ -559,7 +566,7 @@ span {
     bottom: 15px;
 }
 
-.void{
+.pay{
     height: 45px;
     width: 120px;
     border: 1px solid black;
@@ -567,11 +574,113 @@ span {
     text-align: center;
     line-height: 40px;
     color: white;
-    background-color: gray;
+    background-color: red;
     position: relative;
     bottom: 15px;
     box-shadow: inset 0 0 10px #000000;
 
+}
+
+.payment {
+    display: inline-block;
+    list-style-type: none;
+    width: 175px;
+    height: 100px;
+    text-align: center;
+    border: 1px solid green;
+    background-image: url(http://dev.w3.org/csswg/css-images-3/radial1.png);
+    line-height: 100px;
+    font-size: 30px;
+    position: relative;
+    top: 60px;
+    left: 230px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+
+
+.credit-visa {
+      display: inline-block;
+    list-style-type: none;
+    width: 175px;
+    height: 100px;
+    text-align: center;
+    border: 1px solid green;
+    background-image: url(http://www.theonlysambrown.com/images/thumbs/Pic_64_Visa_Logo.jpg);
+    line-height: 100px;
+    font-size: 30px;
+    position: relative;
+    top: 60px;
+    left: 230px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    
+
+}
+
+.credit-master {
+       display: inline-block;
+    list-style-type: none;
+    width: 175px;
+    height: 100px;
+    text-align: center;
+    border: 1px solid green;
+    background-image: url(http://www.market-bridge.com/wp-content/uploads/mastercard2.jpg);
+    line-height: 100px;
+    font-size: 30px;
+    position: relative;
+    top: 60px;
+    left: 230px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+
+}
+
+.credit-discover {
+       display: inline-block;
+    list-style-type: none;
+    width: 175px;
+    height: 100px;
+    text-align: center;
+    border: 1px solid green;
+    background-image: url(http://www.wildwoodrents.com/discover_logo2.jpg);
+    line-height: 100px;
+    font-size: 30px;
+    position: relative;
+    top: 60px;
+    left: 230px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+
+}
+
+.credit-amex {
+       display: inline-block;
+    list-style-type: none;
+    width: 175px;
+    height: 100px;
+    text-align: center;
+    border: 1px solid green;
+    background-image: url(http://frankscoach.com/wp-content/themes/frankCnC/images/American_Express.jpg);
+    line-height: 100px;
+    font-size: 30px;
+    position: relative;
+    top: 60px;
+    left: 230px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+.finalbalance {
+    height: 100px;
+    width: 700px;
+    position: relative;
+    left: 315px;
+    top: 60px;
+    background-color: white;
+    //font-size: 60px;
+    //color: white;
 }
 
 .button {
