--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -181,6 +181,7 @@ body {
     position: relative;
     font-size: 30px;
     font-weight: bolder;
+    background-color: white;
     border: 1px solid black;
     top: 20px;
     left: 70px;
@@ -476,7 +477,8 @@ body {
 }
 
 .itemizer {
-    font-size: 30px;
+    font-size: 25px;
+    font-weight: bold;
     margin: 0 auto;
     margin-top: 8px;
     width: 365px;
@@ -485,7 +487,8 @@ body {
     background-color: rgba(255, 255, 255, 0.75);
     position: relative;
     overflow: scroll;
-    color: red;
+    //text-indent: 10px;
+    color: #0000CC;
 
 }
 
@@ -501,7 +504,9 @@ span {
     border: 1px solid black;
     background: rgb(206,220,231);
     margin-left: 15px;
-    color: red;
+    //text-align: center;
+    font-size: 25px;
+    //color: red;
     //text-indent: 10px;
 
 
@@ -514,7 +519,9 @@ span {
     margin-left: 15px;
     border: 1px solid black;
     background: rgb(206,220,231);
-    color: red;
+    //text-align: center;
+    font-size: 25px;
+    //color: red;
     //text-indent: 10px;
 }
 
@@ -524,7 +531,9 @@ span {
     margin-left: 15px;
     border: 1px solid black;
     background: rgb(206,220,231);
-    color: red;
+    //text-align: center;
+    font-size: 25px;
+    //color: red;
     //text-indent: 10px;
 }
 
