--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@ body {
 }
 
 
+
 .category {
     height: 100px;
     width: 175px;
@@ -45,18 +46,24 @@ body {
     height: 130px;
     span {
         font-family: 'Audiowide', cursive;
-        color: rgb(91, 153, 229);
+        //color: rgb(91, 153, 229);
+        //color: #660099;
+        //color: #FF3300;
         font-size: 100px;
         margin: 0 auto;
         margin-left: 30px;
-        text-shadow: 1px 1px 80px blue;
+        //text-shadow: 1px 1px 80px blue;
+        text-shadow: 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+        //text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
     }
     span2 {
         font-size: 60px;
         font-family: 'Permanent Marker', cursive;
-        text-shadow: 1px 1px 120px #99FF00;
-        //color: rgb(91, 153, 229);
-        color: #99FF00;
+        //text-shadow: 1px 1px 120px #99FF00;
+        text-shadow: 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+        //text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+        color: black;
+        
     }
 }
 
@@ -68,18 +75,23 @@ body {
     float: left;
     span {
         font-family: 'Audiowide', cursive;
-        color: rgb(91, 153, 229);
+        //color: rgb(91, 153, 229);
+        //color: #FF3300;
+        //color: #660099;
         font-size: 100px;
         margin: 0 auto;
         margin-left: 30px;
-        text-shadow: 1px 1px 80px blue;
+        //text-shadow: 1px 1px 80px blue;
+        text-shadow: 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+        //text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
     }
     span2 {
         font-size: 60px;
         font-family: 'Permanent Marker', cursive;
-        text-shadow: 1px 1px 120px #99FF00;
-        //color: rgb(91, 153, 229);
-        color: #99FF00;
+        //text-shadow: 1px 1px 120px #99FF00;
+        text-shadow: 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+        //text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+        color: black;
     }
 }
 
@@ -168,7 +180,7 @@ body {
     margin: 0 auto;
     width: 500px;
     height: 560px;
-    background-color: rgb(212, 204, 204);
+    background-image: url(http://www.graphicpanic.com/images/minimalist-orange-background.jpg);
     box-shadow: inset 0 0 25px #000000;
     border-radius: 10px;
 }
@@ -177,15 +189,17 @@ body {
 
 .loginpassword {
     width: 350px;
-    height: 50px;
+    height: 60px;
     position: relative;
     font-size: 30px;
     font-weight: bolder;
-    background-color: white;
+    background-color: #FFFFCC;
     border: 1px solid black;
     top: 20px;
     left: 70px;
-    box-shadow: 0 8px 6px -6px black;
+    box-shadow: inset 0 0 10px black;
+    line-height: 55px;
+    text-align: center;
     
 
 }
@@ -206,19 +220,20 @@ body {
 .submit {
     list-style-type: none;
     cursor: pointer;
-    height: 90px;
-    width: 90px;
-    background-image: url(http://blog.learntoprogram.tv/wp-content/uploads/2013/12/Button.png);
-    border-radius: 18px;
+    height: 80px;
+    width: 80px;
+    background-image: url(http://pictures.4ever.eu/data/80x80/abstract/red-background-170204.jpg);
+    //border-radius: 18px;
     display: inline-block;
     text-align: center;
     font-size: 30px;
     color: white;
-    line-height: 85px;
-    border: 1px solid black;
+    line-height: 75px;
+    border: 2px solid black;
     position: relative;
-    margin-left: 280px;
-    bottom: 105px;
+    margin-left: 282px;
+    bottom: 102px;
+    box-shadow: inset 0 0 15px black;
 
     //bottom: 0;
     
@@ -236,13 +251,13 @@ body {
     left: 45px;
     width: 80px;
     height: 80px;
-    font-size: 20px;
+    font-size: 25px;
     border: 2px solid black;
-    line-height: 60px;
+    line-height: 75px;
     text-align: center;
     color: white;
-    background-color: gray;
-    box-shadow: 0 8px 6px -6px black;
+    background-image: url(http://pictures.4ever.eu/data/80x80/abstract/red-background-170204.jpg);
+    box-shadow: inset 0 0 15px black;
 
 }
 
@@ -455,20 +470,21 @@ body {
 }
 
 .totalbox {
-    border: 4px solid gray;
+    border: 4px solid orange;
     width: 400px;
     height: 680px;
     margin: 0 auto;
-     box-shadow: inset 0px 20px 40px -14px black,
-                inset 0px -20px 40px -14px black;
-    background: rgb(206,220,231); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(206,220,231,1) 0%, rgba(89,106,114,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(206,220,231,1)), color-stop(100%,rgba(89,106,114,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', endColorstr='#596a72',GradientType=0 ); /* IE6-9 */
+    background-image: url(http://www.graphicpanic.com/images/minimalist-orange-background.jpg);
+    //  box-shadow: inset 0px 20px 40px -14px black,
+    //             inset 0px -20px 40px -14px black;
+    // background: rgb(206,220,231); /* Old browsers */
+    // background: -moz-linear-gradient(top,  rgba(206,220,231,1) 0%, rgba(89,106,114,1) 100%); /* FF3.6+ */
+    // background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(206,220,231,1)), color-stop(100%,rgba(89,106,114,1))); /* Chrome,Safari4+ */
+    // background: -webkit-linear-gradient(top,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* Chrome10+,Safari5.1+ */
+    // background: -o-linear-gradient(top,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* Opera 11.10+ */
+    // background: -ms-linear-gradient(top,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* IE10+ */
+    // background: linear-gradient(to bottom,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* W3C */
+    // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', endColorstr='#596a72',GradientType=0 ); /* IE6-9 */
     p {
         font-weight: bold;
 
@@ -483,12 +499,13 @@ body {
     margin-top: 8px;
     width: 365px;
     height: 515px;
-    border: 2px solid gray;
-    background-color: rgba(255, 255, 255, 0.75);
+    border: 1px solid black;
+    background-color: #FFFFCC;
+    box-shadow: inset 0 0 15px black;
     position: relative;
     overflow: scroll;
     //text-indent: 10px;
-    color: #0000CC;
+    //color: #0000CC;
 
 }
 
@@ -501,13 +518,14 @@ span {
 .subtotal {
     height: 25px;
     width: 125px;
-    border: 1px solid black;
-    background: rgb(206,220,231);
+    border: 2px solid black;
+    background: #FFFFCC;
     margin-left: 15px;
     //text-align: center;
     font-size: 25px;
     //color: red;
     //text-indent: 10px;
+    line-height: 25px;
 
 
 
@@ -517,24 +535,26 @@ span {
     height: 25px;
     width: 125px;
     margin-left: 15px;
-    border: 1px solid black;
-    background: rgb(206,220,231);
+    border: 2px solid black;
+    background-color: #FFFFCC;
     //text-align: center;
     font-size: 25px;
     //color: red;
     //text-indent: 10px;
+    line-height: 25px;
 }
 
 .totaltotal {
     height: 25px;
     width: 125px;
     margin-left: 15px;
-    border: 1px solid black;
-    background: rgb(206,220,231);
+    border: 2px solid black;
+    background-color: #FFFFCC;
     //text-align: center;
     font-size: 25px;
     //color: red;
     //text-indent: 10px;
+    line-height: 25px;
 }
 
 .sendmaster{
@@ -700,16 +720,28 @@ span {
     border-radius: 18px;
     display: inline-block;
     font-size: 28px;
-    color: white;
+    //color: white;
     text-align: center;
     border: 3px solid black;
-    background-image: url(http://blog.learntoprogram.tv/wp-content/uploads/2013/12/Button.png);
+    //background-image: url(http://blog.learntoprogram.tv/wp-content/uploads/2013/12/Button.png);
+    background-image: url(http://www.euvox.eu/vaaCommon/images/ieButtonHoverBackground.png);
     line-height: 100px;
     margin-right: 19px;
     margin-top: 20px;
+    -webkit-text-stroke-width: 1px;
+   -webkit-text-stroke-color: black;
+   box-shadow: inset 0 0 15px #000000;
+
+    
+}
+
+
+
+
+    
     
 
-}
+
 
 
 
