--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,13 +45,14 @@ body {
     width: 100%;
     height: 130px;
     span {
+
         font-family: 'Permanent Marker', cursive;
         font-size: 100px;
         margin: 0 auto;
-        margin-left: 30px;
-        text-shadow: 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
-        text-shadow: 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
-   
+        margin-left: 240px;
+        text-shadow: blue -1px -2px 10px,0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+       
+
     }
    
 }
@@ -67,7 +68,25 @@ body {
         font-size: 90px;
         margin: 0 auto;
         margin-left: 30px;
-        text-shadow: 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+        text-shadow: blue -1px -2px 10px,0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+        
+    }
+   
+}
+
+.admin-header {
+    background-color: black;
+    margin: 0px;
+    width: 100%;
+    height: 130px;
+    float: left;
+    span {
+        //text-align: center;
+        font-family: 'Permanent Marker', cursive;
+        font-size: 90px;
+        margin: 0 auto;
+        margin-left: 130px;
+        text-shadow: blue -1px -2px 10px,0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
         
     }
    
@@ -172,20 +191,40 @@ body {
 
 
 .loginpassword {
-    width: 350px;
+    width: 550px;
     height: 60px;
-    position: relative;
+    display: block;
     font-size: 30px;
     font-weight: bolder;
     background-color: #FFFFCC;
     border: 1px solid black;
-    top: 20px;
-    left: 70px;
+    //top: 20px;
+    //left: 70px;
     box-shadow: inset 0 0 10px black;
     line-height: 55px;
     text-align: center;
+    margin-left: 400px;
+    position: relative;
+    top: 150px;
     
 
+}
+
+.userlogin {
+    //left: 70px;
+    display: block;
+    margin-left: 400px;
+    width: 550px;
+    height: 60px;
+    font-size: 30px;
+    font-weight: bolder;
+    background-color: #FFFFCC;
+    border: 1px solid black;
+    box-shadow: inset 0 0 10px black;
+    line-height: 55px;
+    text-align: center;
+    position: relative;
+    top: 100px;
 }
 
 .modalpassword {
@@ -202,25 +241,27 @@ body {
 }
 
 .submit {
-    list-style-type: none;
-    cursor: pointer;
-    height: 80px;
-    width: 80px;
-    background-image: url(http://pictures.4ever.eu/data/80x80/abstract/red-background-170204.jpg);
-    //border-radius: 18px;
-    display: inline-block;
-    text-align: center;
-    font-size: 30px;
-    color: white;
-    line-height: 75px;
-    border: 2px solid black;
-    position: relative;
-    margin-left: 282px;
-    bottom: 102px;
-    box-shadow: inset 0 0 15px black;
 
-    //bottom: 0;
+    height: 100px;
+    width: 175px;
+    border-radius: 18px;
+    font-size: 28px;
+    text-align: center;
+    background-image: url(http://www.euvox.eu/vaaCommon/images/ieButtonHoverBackground.png); 
+    line-height: 100px;
+    box-shadow: inset 0 0 15px #000000;
+    font-weight: bold;
+    transition: All 0.5s ease;
+    margin: 0 auto;
+    position: relative;
+    top: 200px;
+    right: 40px;
     
+
+}
+
+.submit:hover {
+     background-image: url(http://media.tumblr.com/3835a698ad0155fc3240c9e81c07b95c/tumblr_inline_mqaogeq7xE1qz4rgp.jpg);
 
 }
 
@@ -240,7 +281,7 @@ body {
     line-height: 75px;
     text-align: center;
     color: white;
-    background-image: url(http://pictures.4ever.eu/data/80x80/abstract/red-background-170204.jpg);
+    background-image: url(http://www.noah.org/backgrounds/red_curtain.gif);
     box-shadow: inset 0 0 15px black;
 
 }
@@ -722,6 +763,59 @@ span {
 
 .button:hover {
     background-image: url(http://media.tumblr.com/3835a698ad0155fc3240c9e81c07b95c/tumblr_inline_mqaogeq7xE1qz4rgp.jpg);
+}
+
+.admin {
+    float: right;
+    height: 100px;
+    width: 175px;
+    border-radius: 18px;
+    font-size: 28px;
+    text-align: center;
+    background-image: url(http://www.euvox.eu/vaaCommon/images/ieButtonHoverBackground.png); 
+    line-height: 100px;
+    box-shadow: inset 0 0 15px #000000;
+    font-weight: bold;
+    transition: All 0.5s ease;
+}
+
+.admin:hover {
+    background-image: url(http://media.tumblr.com/3835a698ad0155fc3240c9e81c07b95c/tumblr_inline_mqaogeq7xE1qz4rgp.jpg);
+
+}
+
+.userfield {
+    h1 {
+        color: white;
+    }
+}
+
+.code {
+    height: 50px;
+    width: 500px;
+    font-size: 30px;
+}
+
+.codeenter {
+
+    height: 50px;
+    width: 100px;
+    //border: 1px solid white;
+    background-image: url(http://www.euvox.eu/vaaCommon/images/ieButtonHoverBackground.png);
+    border-radius: 8px;
+    text-align: center;
+    font-size: 30px;
+    line-height: 45px;
+    position: relative;
+    top: 10px;
+    box-shadow: inset 0 0 10px #000000;
+
+}
+
+.userpassword {
+    height: 50px;
+    width: 500px;
+    font-size: 30px;
 }
 
 
