saving order collection

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -753,7 +753,8 @@ span {
     left: 315px;
     top: 60px;
     background-color: white;
-    //font-size: 60px;
+    text-align: center;
+    font-size: 80px;
     //color: white;
 }
 
