math functions are working now

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -251,6 +251,7 @@ body {
     cursor: pointer;
     width: 175px;
     border-radius: 18px;
+    border: 1px solid black;
     font-size: 28px;
     text-align: center;
     background-image: url(http://www.euvox.eu/vaaCommon/images/ieButtonHoverBackground.png); 
@@ -614,7 +615,7 @@ span {
     //color: white;
     background-image: url(http://dev.w3.org/csswg/css-images-3/radial1.png);
     position: relative;
-    bottom: 132px;
+    bottom: 135px;
     left: 12px;
     box-shadow: inset 0 0 10px black;
     cursor: pointer;
@@ -633,7 +634,7 @@ span {
     //color: white;
     background-image: url(http://dev.w3.org/csswg/css-images-3/radial1.png);
     position: relative;
-    bottom: 132px;
+    bottom: 135px;
     left: 12px;
     box-shadow: inset 0 0 10px black;
 }
@@ -649,7 +650,7 @@ span {
     color: white;
     background-color: red;
     position: relative;
-    bottom: 132px;
+    bottom: 135px;
     left: 12px;
     box-shadow: inset 0 0 10px #000000;
 
@@ -770,6 +771,7 @@ span {
     height: 100px;
     width: 175px;
     border-radius: 18px;
+    border: 1px solid black;
     display: inline-block;
     font-size: 28px;
     //color: white;
@@ -799,6 +801,7 @@ span {
     height: 100px;
     width: 175px;
     border-radius: 18px;
+    border: 1px solid black;
     font-size: 28px;
     text-align: center;
     background-image: url(http://www.euvox.eu/vaaCommon/images/ieButtonHoverBackground.png); 
@@ -815,6 +818,7 @@ span {
     height: 100px;
     width: 175px;
     border-radius: 18px;
+    border: 1px solid black;
     font-size: 28px;
     text-align: center;
     background-image: url(http://www.euvox.eu/vaaCommon/images/ieButtonHoverBackground.png); 
@@ -913,7 +917,7 @@ span {
     width: 950px;
     position: relative;
     //top: 100px;
-    background-image: url(http://i1127.photobucket.com/albums/l633/BadWolffGraphixx/Animated%20Gifs/FlamesAnimated2wave.gif);
+    //background-image: url(http://i1127.photobucket.com/albums/l633/BadWolffGraphixx/Animated%20Gifs/FlamesAnimated2wave.gif);
 }
 
 
