--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,11 @@ body {
     color: #333;
 }
 
+.reportpage {
+    width: 100%;
+    height: 500px;
+    background-color: white;
+}
 
 
 .category {
