--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,11 @@ body {
     color: #333;
 }
 
+.myClass {
+   
+    background-image: url(http://img2.findthebest.com/sites/default/files/2307/media/images/Bright_Green_429748_i0.png);
+}
+
 .reportpage {
     width: 100%;
     background-color: white;
