--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1579,7 +1579,7 @@ span {
     width: 950px;
     position: relative;
     //top: 100px;
-    //background-image: url(http://i1127.photobucket.com/albums/l633/BadWolffGraphixx/Animated%20Gifs/FlamesAnimated2wave.gif);
+    background-image: url(http://i1127.photobucket.com/albums/l633/BadWolffGraphixx/Animated%20Gifs/FlamesAnimated2wave.gif);
 }
 
 
